--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -34,6 +34,8 @@ dependencies {
     implementation 'io.reactivex:rxkotlin:1.0.0'
 
     implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
