--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -25,7 +25,7 @@ android {
 
 dependencies {
 
-    implementation project(':lib')
+    implementation project(':exoeasy')
 
     /* */
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
