--- a/exoeasy/build.gradle
+++ b/exoeasy/build.gradle
@@ -21,7 +21,7 @@ ext {
     siteUrl = 'https://github.com/memtrip/exoeasy'
     gitUrl = 'https://github.com/memtrip/exoeasy.git'
 
-    libraryVersion = '1.0'
+    libraryVersion = '1.0.1'
 
     developerId = 'samkirton'
     developerName = 'Samuel Kirton'
@@ -66,10 +66,14 @@ android {
 
 dependencies {
 
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.0.0-beta01'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     implementation 'io.reactivex:rxkotlin:1.0.0'
     implementation 'com.google.android.exoplayer:exoplayer-core:r2.5.4'
+
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0-rc01'
+    implementation 'androidx.core:core:1.0.0-rc01'
+    implementation 'androidx.media:media:1.0.0-rc01'
 
     /* junit */
     testImplementation 'junit:junit:4.12'
@@ -85,8 +89,8 @@ dependencies {
 }
 
 bintray {
-    user = 'property("user")'
-    key = 'property("apikey")'
+    user = System.getenv('BINTRAY_USER')
+    key = System.getenv('BINTRAY_KEY')
 
     configurations = ['archives']
     pkg {
@@ -110,7 +114,7 @@ install {
                 groupId publishedGroupId
                 artifactId artifact
 
-                name 'SQLKing client'
+                name artifact
                 description libraryDescription
                 url 'http://www.memtrip.com'
 
